--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Siteplan</a>
     </nav>
+    <p>C. LeBeau Cousineau - WDD130</p>
 </body>
