--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="uplift_site_plan/sit-plan-rafting.html">UPLIFT Media Group LLC Siteplan</a>
     </nav>
     <p>C. LeBeau Cousineau - WDD130</p>
 </body>
