--- a/uplift-media-group-llc/index.html
+++ b/uplift-media-group-llc/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="uplift_site_plan/site-plan-rafting">UPLIFT Media Group LLC Site Plan</a>
+            <a href="uplift_site_plan/site-plan-rafting.html">UPLIFT Media Group LLC Site Plan</a>
         </nav>
     </header>
 </body>
