--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
-        <a href="uplift_site_plan/sit-plan-rafting.html">UPLIFT Media Group LLC Siteplan</a>
+        <a href="uplift-media-group-llc/index.html">Personal Website</a>
+        <a href="uplift-media-group-llc/uplift_site_plan/site-plan-rafting.html">UPLIFT Media Group LLC Siteplan</a>
     </nav>
     <p>C. LeBeau Cousineau - WDD130</p>
 </body>
