--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <a href="About Me/aboutme.html">About Me Page</a>             
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        <a href="wwr/rivers.html">Rivers<a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="uplift-media-group-llc/index.html">Personal Website</a>
         <a href="uplift-media-group-llc/uplift_site_plan/site-plan-rafting.html">UPLIFT Media Group LLC Siteplan</a>
