--- a/uplift-media-group-llc/index.html
+++ b/uplift-media-group-llc/index.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UPLIFT Media Group LLC</title>
+    <title>UPLIFT Media Group LLC | Home</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="uplift_site_plan/site-plan-rafting.html">UPLIFT Media Group LLC Site Plan</a>
-        </nav>
-    </header>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/UPLIFT Media Group LLC Logo.png" alt="UPLIFT Media Group LLC Logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="wedding-films.html">Wedding Films</a>
+                <a href="contact-us.html">Contact Us</a>
+            </nav>
+        </header>
+        <main>
+            <section id="hero-img">
+                <img src="images/Joe and Elise 3.png" alt="A couple sharing a moment">
+            </section>
+            <section id="copy">
+                <h2>Welcome to UPLIFT Media Group LLC</h2>
+                <p>
+                    Your wedding day is one of the most important moments of your life. It’s a day filled with love, laughter, and unforgettable memories. At UPLIFT Media Group LLC, we specialize in creating cinematic wedding films that allow you to relive those cherished moments for years to come. Our goal is to tell your unique love story through beautifully crafted visuals and heartfelt storytelling.
+                </p>
+                <h2>Why Choose UPLIFT Media Group LLC?</h2>
+                <p>
+                    There are countless wedding videographers out there, so why choose us? We bring a personalized and artistic approach to every wedding we capture. Each couple is different, and we believe their wedding film should reflect their personalities, emotions, and unique journey together.
+                </p>
+                <h2>Our Approach</h2>
+                <p>
+                    We don’t just document your day – we craft a story that you’ll want to watch over and over again. Our team focuses on capturing authentic emotions and meaningful details that make your wedding day special.
+                </p>
+                <h2>Our Commitment to Quality</h2>
+                <p>
+                    We offer high-quality cinematic videography using state-of-the-art equipment and expert editing techniques. Every wedding film is thoughtfully crafted to be visually stunning and emotionally resonant.
+                </p>
+                <h2>Personalized Service</h2>
+                <p>
+                    We take the time to understand your vision, ensuring that your wedding video feels authentic to you. Every couple has a unique love story, and we are dedicated to capturing it in a way that feels personal and true to your relationship.
+                </p>
+                <h2>Professionalism & Reliability</h2>
+                <p>We are committed to making your wedding videography experience stress-free and enjoyable. From initial consultation to final delivery, we handle every step with professionalism and clear communication.</p>
+            </section>
+        </main>
+        <footer>
+            <p>&copy 2025 C. LeBeau Cousineau</p>
+            <a href="contact-us.html">Contact Us</a>
+            <a href="uplift_site_plan/site-plan-rafting">UPLIFT Media Group LLC Site Plan</a>
+            <div class="social">
+                <a href="https://www.facebook.com/profile.php?id=61574870321945" target="_blank">
+                    <img src="images/facebook-logo.png" alt="fb icon">
+                </a>
+                <a href="https://www.youtube.com/@lewiscranston96" target="_blank">
+                    <img src="images/youtube-logo.png" alt="youtube icon">
+                </a>
+                <a href="https://www.instagram.com/uplift_media_group_llc/?hl=en" target="_blank">
+                    <img src="images/instagram-logo.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
