--- a/uplift-media-group-llc/uplift_site_plan/site-plan-rafting.html
+++ b/uplift-media-group-llc/uplift_site_plan/site-plan-rafting.html
@@ -207,7 +207,7 @@
       <p>
         Some of our past couples have shared short video testimonials, allowing you to hear directly from them about how we made their wedding day unforgettable.
       </p>
-      <p>Images for the Wedding Films page</p>
+      <p>Images for the Page 2</p>
         <img src="images/Joe and Elise 2.png" alt="A Still from a wedding video">
         <img src="images/Parker and Emiley 2.png" alt="A Still from a wedding video">
 
@@ -250,7 +250,7 @@
       </p>
       <h4>Location and Service Areas</h4>
       <p>While we are based in Rexburg/East Idaho region, we are available for travel and destination weddings. Let us know where you’re getting married, and we’ll see how we can make it work!</p>
-      <p>Images for the Contact Us page</p>
+      <p>Images for the Page 3</p>
         <img src="images/Joe and Elise 3.png" alt="A Still from a wedding video">
         <img src="images/Parker and Emiley 3.png" alt="A Still from a wedding video">
 
@@ -263,16 +263,22 @@
         Create three wireframes for your site. One for each page and list them here</p>
 
       <h3>Home</h3>
+      <p>         
+        [Any additional details about home that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="home page wireframe">
 
-      <img src="images/Home Wireframe.png" alt="home page wireframe">
+      <h3>[Page 2]</h3>
+      <p>         
+        [Any additional details about page 2 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="page 2 wireframe">
 
-      <h3>Wedding Films</h3>
-
-      <img src="images/Wedding Films Wireframe.png" alt="page 2 wireframe">
-
-      <h3>Contact Us</h3>
-
-      <img src="images/Contact Us Wireframe.png" alt="page 3 wireframe">
+      <h3>[Page 3]</h3>
+      <p>         
+        [Any additional details about page 3 that the wireframe does not make clear]
+      </p>
+      <img src="#" alt="page 3 wireframe">
     </main>
   </body>
 
