--- a/uplift-media-group-llc/index.html
+++ b/uplift-media-group-llc/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,10 +22,11 @@
                 <a href="contact-us.html">Contact Us</a>
             </nav>
         </header>
-        <main>
-            <section id="hero-img">
-                <img src="images/Joe and Elise 3.png" alt="A couple sharing a moment">
+        <main id="home-main">
+            <section class="image">
+                <img id="hero-img" src="images/Joe and Elise 3.png" alt="A couple sharing a moment">
             </section>
+            <div id="background"></div>
             <section id="copy">
                 <h2>Welcome to UPLIFT Media Group LLC</h2>
                 <p>
