--- a/uplift-media-group-llc/contact-us.html
+++ b/uplift-media-group-llc/contact-us.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +23,7 @@
             </nav>
         </header>
         <main>
-            <section class="home-main">
+            <section id="home-main">
                 <form>
                     <label>First Name<br><input type="text" placeholder="Placeholder"></label><br>
                     <label>Last Name<br><input type="text" placeholder="Placeholder"></label><br>
